# OpenixIMG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  OpenixIMG.cpp
includes/: OpenixCFG.hpp  OpenixIMGFile.hpp  OpenixIMGWTY.hpp  OpenixPacker.hpp  OpenixPartition.hpp  OpenixUtils.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  OpenixCFG.cpp  OpenixIMGFile.cpp  OpenixIMGWTY.cpp  OpenixPacker.cpp  OpenixPartition.cpp  OpenixUtils.cpp
test/: CMakeLists.txt  OpenixCFGTest.cpp  OpenixPartitionTest.cpp
test/files/: image.cfg  sys_partition.fex
